--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Its online experiment - apsolut */
 
 canvas {
   display: block;
@@ -9,5 +8,19 @@ canvas {
 }
 
 body {
- background:#000 url(http://78waves.com/bg.jpg);
+ background:#000 url(../bg.jpg);
+}
+
+.centeredImage {
+  position: fixed;
+  top: 50%;
+  left: 25%;
+  margin-top: -50px;
+  margin-left: -150px;
+     -moz-opacity:0.5; /* For older FF versions */
+   -khtml-opacity:0.5;
+   opacity:0.5;
+   filter:alpha(opacity=50);
+max-width:100%;
+
 }
